# interactive-track-and-trace

./: .gitignore  Progress.txt  README.md
SimData/4dualconditions (snap)/2.5km12h/: particle_statistics.csv  single_particle_trajectory.csv
SimData/4dualconditions (snap)/2.5km24h/: particle_statistics.csv  single_particle_trajectory.csv
SimData/4dualconditions (snap)/5km24h/: particle_statistics.csv  single_particle_trajectory.csv
SimData/Conditional/ParcelsFreeSlip/DirectionBased/: particle_statistics.csv
SimData/Conditional/ParcelsFreeSlip/DistanceBased/: particle_statistics.csv
SimData/Conditional/ParcelsFreeSlip/VelocityBased/: particle_statistics.csv  single_particle_trajectory.csv
SimData/Conditional/Parcels_PartialSlip/DirectionBased/: particle_statistics.csv  single_particle_trajectory.csv
SimData/Conditional/Parcels_PartialSlip/DistanceBased/: particle_statistics.csv  single_particle_trajectory.csv
SimData/Conditional/Parcels_PartialSlip/VelocityBased/: particle_statistics.csv  single_particle_trajectory.csv
SimData/Freeslip/velocity/: particle_statistics.csv  single_particle_trajectory.csv
SimData/ParcelsFreeSlip/DistanceBased/: single_particle_trajectory.csv
SimData/ParcelsFreeSlip/VelocityBased/: single_particle_trajectory.csv
SimData/Snap/DirectionalBased/: particle_statistics.csv  single_particle_trajectory.csv
SimData/Snap/DistanceBased/: particle_statistics.csv  particle_statistics_snap_distancedbased.csv  single_particle_trajectory.csv  single_particle_trajectory_snap_distancebased.csv
SimData/Snap/None/: particle_statistics.csv
SimData/Snap/VelocityBased/: particle_statistics.csv
SimData/Unconditional/ParcelsFreeslip/Distance/: particle_statistics.csv
SimData/Unconditional/ParcelsFreeslip/Velocity/: particle_statistics.csv  single_particle_trajectory.csv
SimData/Unconditional/ParcelsPartialslip/Direction/: particle_statistics.csv  single_particle_trajectory.csv
SimData/Unconditional/ParcelsPartialslip/Distance/: particle_statistics.csv  single_particle_trajectory.csv
SimData/Unconditional/ParcelsPartialslip/Velocity/: particle_statistics.csv  single_particle_trajectory.csv
particle-track-and-trace/: JacobianMetric.py  README.md  all_particles_trajectory.csv  curvature.py  main.cpp  particle_statistics.csv  particle_trajectory.csv  plot_all_trajectories.py  plot_only_trajectory.py  plot_trajectory.py  plot_trajectory2.py  plot_trajectory_with_grids.py  single_particle_trajectory.csv
particle-track-and-trace/src/: CMakeLists.txt  Program.cpp  main.cpp
particle-track-and-trace/src/advection/: UVGrid.cpp  UVGrid.h  interpolate.cpp  interpolate.h  readdata.cpp  readdata.h
particle-track-and-trace/src/advection/kernel/: DualBoundaryConditionKernel.cpp  DualBoundaryConditionKernel.h  FreeSlipAdvectionConditionKernel.cpp  FreeSlipAdvectionConditionKernel.h  FreeSlipBoundaryConditionKernel.cpp  FreeSlipBoundaryConditionKernel.h  ParcelsAdvectionConditionKernel.cpp  ParcelsAdvectionConditionKernel.h  ParcelsBoundaryConditionKernel.cpp  PartialSlipAdvectionConditionKernel.cpp  PartialSlipAdvectionConditionKernel.h  PartialSlipBoundaryConditionKernel.cpp  PartialSlipBoundaryConditionKernel.h  SnapAdvectionConditionKernel.cpp  SnapAdvectionConditionKernel.h  parcels3_freeslip.cpp  parcels3_freeslip.h
particle-track-and-trace/src/badges/: FileBadgeFactory.cpp  StaticBadge.cpp
particle-track-and-trace/src/collisions/: SoundEffect.cpp
particle-track-and-trace/src/commands/: CameraMoveCallback.cpp  SpawnPointCallback.cpp  TimerCallbackCommand.cpp
particle-track-and-trace/src/layers/: BackgroundImage.cpp  Camera.cpp  Health.cpp  LagrangeGlyphs.cpp  LagrangeGlyphs.h
tests/: inspect_grid.py  inspect_h5.py  inspect_land_mask.py  inspect_shore.py  inspect_shore_distance.py  test.py
tests/plots/: histogram.py  partial_trajectory_dualcondition.csv  plot_trajectories.py  snap_trajectory_dualcondition.csv  snap_trajectory_velocitybased.csv
tests/testgrid/: grid.h5  hydrodynamic_U.h5  hydrodynamic_V.h5  shore_distance.h5  spawn_locations.csv
troep/: plot_trajectory.py
troep/freeslips/: 30mayFreeslip.cpp  parcels2_freeslip.cpp  parcels3_freeslip.cpp  parcels3_freeslip.h
troep/partialslips/: 2.partialslip.cpp
